# chainedge

./: README.md
contract/: ChainEdge.json  README.md  foundry.toml
contract/script/: DeployChainEdge.s.sol
contract/src/: ChainEdge.sol
contract/test/: ChainEdge.t.sol
node/: .gitignore  Cargo.toml  README.md
node/chainedge/: Cargo.toml
node/chainedge/src/: admin.rs  main.rs  populate.rs
node/chainedge/src/admin/: auth.rs  clear_fs.rs  list.rs
node/origin_server/: Cargo.toml
node/origin_server/src/: main.rs
