[package]
name = "chainedge"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = { version = "0.6.20", features = ["tracing"] }
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
http = "0.2.9"
lazy_static = "1.4.0"
axum-macros = "0.3.8"
chrono = "0.4.28"
http-cache-semantics = "1.0.1"
hyper = "0.14.30"
cacache = { version = "11.6.0", features = [
  "tokio-runtime",
  "mmap",
], default-features = false }
http-serde = "1.1.3"
postcard = { version = "1.0.7", features = ["use-std"] }
maud = { version = "0.25.0", features = ["axum"] }
tower-cookies = { version = "0.9.0", features = ["private", "signed"] }
debug-ignore = "1.0.5"
async-trait = "0.1.74"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethers-middleware = "2.0.14"
ethers-contract = "2.0.14"
signal-hook = "0.3.17"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["timeout"] }
futures = "0.3.30"
ethers-providers = "2.0.14"

